tests/snapshots/pass__basic_go.snap
---
source: tests/pass.rs
expression: output
---
package main

import "fmt"
import "strings"

const MAX_SIZE int = 100

const PI float64 = 3.14159

type UserId int

type User struct {
    id UserId
    name string
    age int
    active bool
}

type Counter struct {
    value int
}

func (c Counter) getValue() int {
    return c.value
}

func (c Counter) increment() Counter {
    c.value = (c.value + 1)
    return c
}

func sum(numbers int) int {
    total := 0
    i := 0
    for (i < 10) {
        total = (total + numbers)
        i = (i + 1)
    }
    return total
}

func sender(ch chan int) {
    ch <- 42
}

func receiver(ch chan int) int {
    return (<-ch)
}

func worker(id int) {
    fmt.Println(id)
}

func cleanup() {
    fmt.Println("cleanup")
}

func processString(s string) string {
    if (s == "") {
        return "empty"
    }
    upper := strings.ToUpper(s)
    return upper
}

func arrayOps() int {
    arr := [5]int{1, 2, 3, 4, 5}
    sum := 0
    i := 0
    for (i < 5) {
        sum = (sum + arr[i])
        i = (i + 1)
    }
    return sum
}

func createUser(name string, age int) User {
    user := User{id: UserId(1), name: name, age: age, active: true}
    return user
}

func checkAge(age int) string {
    if (age < 18) {
        return "minor"
    } else {
        if (age < 65) {
            return "adult"
        } else {
            return "senior"
        }
    }
}

func validateInput(value int, enabled bool) bool {
    return ((enabled && (value > 0)) && (value < MAX_SIZE))
}

func calculate(x int, y int) int {
    a := (x + y)
    b := (x - y)
    c := (x * y)
    d := (x / y)
    e := (x % y)
    result := ((((a + b) + c) + d) + e)
    return result
}

func divide(a int, b int) (int, int) {
    return (a / b), (a % b)
}

func minMax(a int, b int, c int) (int, int, int) {
    min := a
    max := a
    mid := a
    if (b < min) {
        min = b
    }
    if (c < min) {
        min = c
    }
    if (b > max) {
        max = b
    }
    if (c > max) {
        max = c
    }
    if ((a != min) && (a != max)) {
        mid = a
    } else {
        if ((b != min) && (b != max)) {
            mid = b
        } else {
            mid = c
        }
    }
    return min, mid, max
}

func main() {
    var a = 1
    var b int = 1
    const c = 1
    const d int = 1
    var e, f, g int
    var h, i = 2, 3
    var j, k int = 4, 5
    const l, m = 6, 7
    const n, o int = 8, 9
    x := 42
    y := (((((((((((((((10 + a) + b) + c) + d) + e) + f) + g) + h) + i) + j) + k) + l) + m) + n) + o)
    sum := (x + y)
    radius := 5.0
    area := ((PI * radius) * radius)
    message := "Hello, World"
    processed := processString(message)
    isValid := validateInput(50, true)
    user := createUser("Alice", 30)
    category := checkAge(user.age)
    counter := Counter{value: 0}
    counter = counter.increment()
    count := counter.getValue()
    arraySum := arrayOps()
    status := ""
    if (y > 0) {
        status = "success"
    } else {
        status = "failure"
    }
    quot, rem := divide(17, 5)
    small, medium, large := minMax(3, 1, 2)
    p, q := 100, 200
    var q2, r2 = divide(20, 6)
    px := (&x)
    fmt.Println((*px))
    (*px) = 100
    fmt.Println(x)
    pq := new(int)
    (*pq) = 55
    fmt.Println((*pq))
    nums := []int{1, 2, 3, 4, 5}
    fmt.Println(nums[0])
    data := make([]int, 10)
    data[0] = 42
    fmt.Println(data[0])
    ages := map[string]int{"Alice": 30, "Bob": 25}
    fmt.Println(ages["Alice"])
    scores := make(map[string]int)
    scores["test"] = 100
    fmt.Println(scores["test"])
    ch := make(chan int, 1)
    ch <- 100
    value := (<-ch)
    fmt.Println(value)
    ch2 := make(chan int, 1)
    sender(ch2)
    result := receiver(ch2)
    fmt.Println(result)
    go worker(1)
    go func() {
        fmt.Println("anonymous goroutine")
    }()
    defer cleanup()
    defer fmt.Println("deferred")
    loopIdx := 0
    for (loopIdx < 10) {
        if (loopIdx == 3) {
            loopIdx = (loopIdx + 1)
            continue
        }
        if (loopIdx == 7) {
            break
        }
        fmt.Println(loopIdx)
        loopIdx = (loopIdx + 1)
    }
    for idx, val := range nums {
        fmt.Println(idx, val)
    }
    for k, v := range ages {
        fmt.Println(k, v)
    }
    for rangeIdx := range nums {
        fmt.Println(rangeIdx)
    }
    add := func(a int, b int) int {
        return (a + b)
    }
    fmt.Println(add(1, 2))
    multiply := func(a int, b int) int {
        return (a * b)
    }
    fmt.Println(multiply(3, 4))
    unaryNum := 10
    fmt.Println((-unaryNum))
    boolVal := true
    fmt.Println((!boolVal))
    fmt.Println("done")
    fmt.Printf("Sum: %d\n", sum)
    fmt.Printf("Area: %f\n", area)
    fmt.Printf("Processed: %s\n", processed)
    fmt.Printf("Valid: %t\n", isValid)
    fmt.Printf("User: %s (%s)\n", user.name, category)
    fmt.Printf("Count: %d\n", count)
    fmt.Printf("Array sum: %d\n", arraySum)
    fmt.Printf("Status: %s\n", status)
    fmt.Printf("17 / 5 = %d remainder %d\n", quot, rem)
    fmt.Printf("min=%d, mid=%d, max=%d\n", small, medium, large)
    fmt.Printf("20 / 6 = %d remainder %d\n", q2, r2)
    fmt.Printf("p=%d, q=%d\n", p, q)
}
