tests/snapshots/pass__simple_add.snap
---
source: tests/pass.rs
expression: output
---
package main

import "fmt"

func add(x int, y int) int {
    return (x + y)
}

func counter() int {
    x := 0
    x = 10
    x = (x + 5)
    return x
}

func main() {
    result := add(10, 20)
    count := counter()
    fmt.Printf("%d %d", result, count)
}
